# external-users

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  pom.xml  pyproject.toml
edatos-external-users-core/: pom.xml
edatos-external-users-external-api/: pom.xml
edatos-external-users-external-api-impl/: pom.xml
edatos-external-users-external-js/: package-lock.json  pom.xml
edatos-external-users-external-rest/: pom.xml
edatos-external-users-external-web/: pom.xml
edatos-external-users-internal-api-impl/: pom.xml
edatos-external-users-internal-js/: pom.xml
edatos-external-users-internal-rest/: pom.xml
edatos-external-users-internal-web/: pom.xml
edatos-external-users-public-rest/: pom.xml
edatos-external-users-rest-common/: pom.xml
etc/docker/: app.yml  istac-database.yml  (+2 more)
etc/scripts/kafka-producer/: README.md  kafka-producer.py  pyproject.toml  run.bat  run.sh
etc/scripts/kafka-producer/avro/: attribute-value.avsc  categorisation.avsc  code-dimension.avsc  dataset-version.avsc  dataset.avsc  datetime.avsc  dimension-representation-mapping.avsc  external-item.avsc  identifiable-statistical-resource.avsc  international-string.avsc  lifecycle-statistical-resource.avsc  nameable-statistical-resource.avsc  publication-version.avsc  publication.avsc  queryVersion.avsc  related-resource.avsc  siemac-metadata-statistical-resource.avsc  statistic-officiality.avsc  temporal-code.avsc  test.avsc  versionable-statistical-resource.avsc
statistical-operations-roadmap-core/: pom.xml
statistical-operations-roadmap-db-migration/: README.md  pom.xml
(+1042 files in other folders)
