[tool.poetry]
name = "kafka-producer"
version = "0.0.0"
description = "Produces statistical operations and datasets messages to be passed through Kafka"
authors = ["Arte <arte@arte.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.4.0"
confluent-kafka = {extras = ["avro"], version = "^1.7.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
